--- a/_posts/生活/2021-08-24-第一篇博客.md
+++ b/_posts/生活/2021-08-24-第一篇博客.md
@@ -3,4 +3,5 @@ layout: post
 title: 第一篇博客
 category: 生活
 ---
-  这是我的第一篇博客。
+之前总是想做一个自己的博客，但是因为要进行备案，第一次备案失败后就搁置了。 
+在这里只是分享一些工作和生活。如果把一个人的生活看做一个金字塔，大致可以分为3块。金字塔塔尖是家庭，中间是工作，最底层是兴趣。最难平衡的就是家庭与生活，自己也在
