--- a/_posts/生活/2021-08-24-第一篇博客.md
+++ b/_posts/生活/2021-08-24-第一篇博客.md
@@ -3,5 +3,9 @@ layout: post
 title: 第一篇博客
 category: 生活
 ---
-之前总是想做一个自己的博客，但是因为要进行备案，第一次备案失败后就搁置了。 
-在这里只是分享一些工作和生活。如果把一个人的生活看做一个金字塔，大致可以分为3块。金字塔塔尖是家庭，中间是工作，最底层是兴趣。最难平衡的就是家庭与生活，自己也在
+之前总是想做一个自己的博客，但是因为要进行备案，第一次备案失败后就搁置了。 不过现在发现Github可以很容易的搭建一个自己的博客，所以就来这里尝试。
+
+在这里只是分享一些工作和生活。如果把一个人的生活看做一个金字塔，大致可以分为3块。金字塔塔尖是家庭，中间是工作，最底层是兴趣。当然有些人也可能会把工作放到塔尖，但就我个人来讲，家庭的重要性是远大于工作，工作是一个家庭的支持，是不可或缺的部分。兴趣其实就是自己的一些爱好，一个人总是工作，不免有些乏味。
+
+自己现在真的很迷茫，感觉完全是被生活拖着走，不知道自己未来做什么。虽然工作十分忙碌，但是没有清晰的目标，感觉整个人很混乱。希望自己有一个天情况能够有所转变，惊喜也好，失望也罢，总之从未失去对于生活的热爱！
+
